use role defaults instead of playbook overrides

--- a/platform/playbooks/network_from_download.yml
+++ b/platform/playbooks/network_from_download.yml
@@ -11,4 +11,5 @@
       - netfoundry.platform
   vars:
     # download as YAML from NF web console
-    downloaded_network_file: /netfoundry/downloaded_network.yml
+    # downloaded_network_file: /netfoundry/downloaded_network.yml
+    # netfoundry_credentials: /netfoundry/credentials.json
