get volume sources as env vars

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
-# usage: modify the volumes and run
-# docker-compose up --build network_from_download
-# docker-compose up --build run_playbook
+# usage:
+#
+# $ NETFOUNDRY_API_ACCOUNT=~/.netfoundry/nfziti-staging.json \
+#   NETFOUNDRY_DOWNLOADED_NETWORK=/tmp/kentest_HvpA_network.yml \
+#       docker-compose up --build network_from_download
+#
+# or
+#
+# $ NETFOUNDRY_API_ACCOUNT=~/.netfoundry/nfziti-staging.json \
+#   NETFOUNDRY_ANSIBLE_PLAYBOOK=/tmp/MY_PLAYBOOK.yml \
+#       docker-compose up --build run_playbook
+#
 version: '3.3'
 services:
   network_from_download:
@@ -8,18 +17,14 @@ services:
     build:
       context: .
     volumes:
-#      - ~/.netfoundry/nfziti-staging.json:/netfoundry/credentials.json
-      - ~/.netfoundry/credentials.json:/netfoundry/credentials.json
-#      - /tmp/kentest_HvpA_network.yml:/netfoundry/downloaded_network.yml
-      - ~/Downloads/downloaded_network.yml:/netfoundry/downloaded_network.yml
+      - ${NETFOUNDRY_API_ACCOUNT:-~/.netfoundry/credentials.json}:/netfoundry/credentials.json
+      - ${NETFOUNDRY_DOWNLOADED_NETWORK:-~/Downloads/downloaded_network.yml}:/netfoundry/downloaded_network.yml
     command: ansible-playbook netfoundry.platform.network_from_download
   run_playbook:
     image: netfoundry/ansible:run_playbook
     build:
       context: .
     volumes:
-#      - ~/.netfoundry/nfziti-staging.json:/netfoundry/credentials.json
-      - ~/.netfoundry/credentials.json:/netfoundry/credentials.json
-#      - /tmp/MY_PLAYBOOK.yml:/netfoundry/playbook.yml
-      - ~/Downloads/playbook.yml:/netfoundry/playbook.yml
+      - ${NETFOUNDRY_API_ACCOUNT:-~/.netfoundry/credentials.json}:/netfoundry/credentials.json
+      - ${NETFOUNDRY_ANSIBLE_PLAYBOOK:-~/Downloads/playbook.yml}:/netfoundry/playbook.yml
     command: ansible-playbook /netfoundry/playbook.yml
