--- a/.github/workflows/publish-collection-galaxy.yml
+++ b/.github/workflows/publish-collection-galaxy.yml
@@ -84,7 +84,7 @@ jobs:
         context: . # build context is workspace
         builder: ${{ steps.buildx.outputs.name }}
         build-args: | 
-          collection_version="==${{ steps.read_version.outputs.collection_version }}"
+          collection_version=${{ steps.read_version.outputs.collection_version }}
         platforms: linux/amd64,linux/arm/v7,linux/arm64
         push: true
         tags: ${{ steps.compose_tags.outputs.container_tags }}
