stop building arm/v7 (32bit)

--- a/.github/workflows/publish-collection-galaxy.yml
+++ b/.github/workflows/publish-collection-galaxy.yml
@@ -66,7 +66,9 @@ jobs:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@master
       with:
-        platforms: amd64,arm,arm64
+        platforms: amd64,arm64
+        # ignore arm/v7 (32bit) because unsupported by "cryptography" dep of
+        # Ansible and demand seems unlikely
 
     - name: Set up Docker BuildKit
       id: buildx
@@ -85,6 +87,6 @@ jobs:
         builder: ${{ steps.buildx.outputs.name }}
         build-args: | 
           collection_version=${{ steps.read_version.outputs.collection_version }}
-        platforms: linux/amd64,linux/arm/v7,linux/arm64
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ${{ steps.compose_tags.outputs.container_tags }}
