--- a/netfoundry.platform/playbooks/network_from_download.yml
+++ b/netfoundry.platform/playbooks/network_from_download.yml
@@ -5,6 +5,11 @@
   # networks
 - hosts: localhost
   gather_facts: False
+  pre_tasks:
+    - name: Install NetFoundry Python Package
+      pip:
+        name: netfoundry
+      tags: pypi
   roles:
     - { role: network_from_download, tags: ['netfoundry'] }
   collections:
