--- a/netfoundry.platform/playbooks/network_from_download.yml
+++ b/netfoundry.platform/playbooks/network_from_download.yml
@@ -16,5 +16,5 @@
       - netfoundry.platform
   vars:
     # download as YAML from NF web console
-    # downloaded_network_file: /netfoundry/downloaded_network.yml
+    # netfoundry_downloaded_network: /netfoundry/downloaded_network.yml
     # netfoundry_credentials: /netfoundry/credentials.json
