--- a/netfoundry.platform/roles/network_from_download/defaults/main.yml
+++ b/netfoundry.platform/roles/network_from_download/defaults/main.yml
@@ -5,7 +5,7 @@ network_size: small           # vertical scaling factor for compute instances
 network_datacenter: us-east-1 #
 network_version: default      # "default" (i.e. stable) or "latest" (i.e. experimental) or "7.3.23" (product version) 
 netfoundry_credentials: /netfoundry/credentials.json
-downloaded_network_file: /netfoundry/downloaded_network.yml
+netfoundry_downloaded_network: /netfoundry/downloaded_network.yml
 netfoundry_identity_organization: null
 netfoundry_network_group: null
 
