--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,18 @@
 # usage:
 #
-# $ docker-compose pull && \
-#   NETFOUNDRY_API_ACCOUNT=~/.netfoundry/nfziti-staging.json \
-#   NETFOUNDRY_DOWNLOADED_NETWORK=/tmp/kentest_HvpA_network.yml \
-#       docker-compose run network_from_download
+# $ compose pull && \
+#   NETFOUNDRY_API_ACCOUNT=~/.netfoundry/credentials.json \
+#   NETFOUNDRY_DOWNLOADED_NETWORK=~/Downloads/downloaded_network.yml \
+#     docker-compose run network_from_download
 #
 # or
 #
 # $ docker-compose pull && \
-#   NETFOUNDRY_API_ACCOUNT=~/.netfoundry/nfziti-staging.json \
-#   NETFOUNDRY_ANSIBLE_PLAYBOOK=/tmp/MY_PLAYBOOK.yml \
-#       docker-compose run run_playbook
+#   NETFOUNDRY_API_ACCOUNT=~/.netfoundry/credentials.json \
+#   NETFOUNDRY_ANSIBLE_PLAYBOOK=~/Downloads/playbook.yml \
+#     docker-compose run run_playbook
 #
+
 version: '3.3'
 services:
   network_from_download:
