updated network property locationCode to region

--- a/netfoundry.platform/roles/network_from_download/tasks/main.yml
+++ b/netfoundry.platform/roles/network_from_download/tasks/main.yml
@@ -24,7 +24,7 @@
   netfoundry_network:
     name: "{{ downloaded_network.name }}"
     size: "{{ downloaded_network.size }}"
-    datacenter: "{{ downloaded_network.locationCode }}"
+    datacenter: "{{ downloaded_network.region }}"
     version: "{{ downloaded_network.productVersion }}"
     state: PROVISIONED
     network_group: "{{ netfoundry_api.network_group }}"
